# Orbital

./: .gitignore  BACKUP_EXISTING.rs  Cargo.toml  Jenkinsfile  LICENSE  Makefile.toml  Problems.md  README.md  RenderDoc.cap  android-build.sh  android-install.sh  build.rs  codebook.toml  steamdeck.sh  steamdeck_console.sh  vert.spv
Example/: Cargo.toml
Example/src/: entrypoint.rs  lib.rs  main.rs  main_android.rs
Example/src/app/: mod.rs
Example/src/app/elements/: camera.rs  damaged_helmet.rs  debug_controller.rs  debug_world_environment.rs  lights.rs  mod.rs  pbr_spheres.rs  ping_pong.rs
Example/src/game/: mod.rs
Example/src/game/elements/: camera.rs  cubes.rs  damaged_helmet.rs  debug_world_environment.rs  lights.rs  (+4 more)
Examples/Triangle/: Cargo.toml
Examples/Triangle/android/: build.gradle
Examples/Triangle/src/: app.rs  entrypoint.rs  lib.rs  main.rs  shader.wgsl
Orbital/: Cargo.toml  build.rs
Orbital/src/: bounding_box.rs  cache_state.rs  error.rs  lib.rs  logging.rs  timer.rs  transform.rs  variant.rs
Orbital/src/app/: app_changes.rs  event.rs  input_event.rs  mod.rs  runtime.rs  settings.rs  your_shader_here.wgsl
Orbital/src/cache/: entry.rs  mod.rs
Orbital/src/game/: mod.rs  runtime.rs  settings.rs
Orbital/src/input/: action.rs  axis.rs  binding.rs  frame.rs  id.rs  layout.rs  manager.rs  mod.rs  state.rs
Orbital/src/loader/: gltf.rs  mod.rs
Orbital/src/renderer/: caching_direct_renderer.rs  draw_indexed_indirect.rs  draw_indirect.rs  indirect_draw.rs  mod.rs  non_caching_direct_renderer.rs  standard.rs
Orbital/src/util/: input_handler.rs  mod.rs  rgb_to_rgba.rs
Orbital/src/world/: element_store.rs  mod.rs  model_store.rs  world_change.rs
Runtime/: Cargo.toml  build.rs
Runtime/src/: app.rs  error.rs  gpu_backend.rs  lib.rs  log.rs  logging.rs  mip_level.rs  or.rs  quaternion.rs  render_server.rs  russimp.rs  shader.rs  shader.wgsl  timer.rs  wgpu.rs  window_wrapper.rs
Runtime/src/app/: app.rs  app_changes.rs  app_event.rs  context.rs  event.rs  mod.rs  runtime.rs  runtime_event.rs  settings.rs  standard.rs  state.rs
Runtime/src/cache/: change.rs  entry.rs  mod.rs
Runtime/src/camera_controller/: axis_input.rs  button_axis.rs  button_input.rs  descriptor.rs  mod.rs  mouse_input.rs  mouse_input_type.rs  movement_type.rs  realization.rs  rotation_type.rs
Runtime/src/change_list/: entry.rs  ty.rs
Runtime/src/element/: mod.rs  registration.rs  store.rs  variant.rs
Runtime/src/entity/: entity.rs  entity_system.rs  mod.rs
Runtime/src/error/: connector.rs  entity.rs  mod.rs  runtime.rs
Runtime/src/event/: event.rs  event_system.rs  mod.rs
Runtime/src/game/: mod.rs  runtime.rs  settings.rs
Runtime/src/gpu_backend/: mod.rs
Runtime/src/importer/: mod.rs
Runtime/src/loader/: mod.rs
Runtime/src/logging/: mod.rs
Runtime/src/macros/: mod.rs
Runtime/src/physics/: event.rs  mod.rs
Runtime/src/renderer/: event.rs  frustum_culling.wgsl  indirect_indexed_draw.rs  mod.rs  model.rs  old.rs  skybox.rs  standard.rs  system.rs  test.rs  tests.rs
Runtime/src/resources/: layout.drawio  mesh.rs  mod.rs  model.rs  pipeline.rs  vertex.rs
Runtime/src/runtime/: app.rs  context.rs  mod.rs  settings.rs  surface_wrapper.rs  window_wrapper.rs
Runtime/src/server/: render.rs
Runtime/src/shader_preprocessor/: error.rs  mod.rs  tests.rs
Runtime/src/systems/: mod.rs
Runtime/src/util/: buffer.rs
Runtime/src/wgpu_test_adapter/: README.md  mod.rs
Runtime/src/world/: mod.rs  world_change.rs
Runtime/src/world_environment/: sampling_type.rs
Runtime/src/world_old/: mod.rs
Tests/gltf_pbr_damaged_helmet/: Cargo.toml
Tests/gltf_pbr_damaged_helmet/src/: lib.rs
WGPU-Engine/: .gitignore  Cargo.toml  Problems.md  README.md  build.rs
WGPU-Engine/.github/workflows/: build.yml
WGPU-Engine/res/: cheese.blend  cheese.glb  cheese.gltf  missing_texture.kra
WGPU-Engine/res/cube/: cube.blend1  round_cube.blend  round_cube.mtl
WGPU-Engine/src/_engine/: model.rs  vertex.rs
WGPU-Engine/src/app/: mod.rs
WGPU-Engine/src/engine/: engine_error.rs  logical_device.rs  mod.rs
WGPU-Engine/src/entities/: brick_cube.rs  camera_controlling_entity.rs  cheese.rs  clear_screen_entity.rs  empty_entity.rs  mod.rs  square.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  runtime.rs  settings.rs  timer.rs
crates/compute_engine_wgpu/: Cargo.toml
crates/compute_engine_wgpu/src/: lib.rs
crates/engine-web/: Cargo.toml  Trunk.release.toml  Trunk.toml  index.html
crates/engine-web/src/: app.rs  app_routes.rs  lib.rs  main.rs
crates/engine_app/: Cargo.toml  tauri.conf.json
crates/engine_app/src/: main.rs
crates/engine_old/: Cargo.toml
crates/engine_old/src/: app.rs  lib.rs  main.rs
crates/engine_result_wgpu/: Cargo.toml
crates/engine_result_wgpu/src/: lib.rs
crates/engine_web/: Cargo.toml  Trunk.release.toml  Trunk.toml  index.html  style.scss
crates/entity_system/: Cargo.toml
crates/entity_system/src/: boxed_entity.rs  entity.rs  entity_system.rs  lib.rs  singleton.rs
crates/event_system/: Cargo.toml
crates/event_system/src/: boxed_event.rs  event.rs  event_system.rs  events.rs  lib.rs  singleton.rs
crates/gpu_connector/: Cargo.toml
crates/gpu_connector/src/: lib.rs
crates/loader_gltf/: Cargo.toml
crates/loader_gltf/src/: lib.rs  tests.rs  worker.rs  worker_mode.rs
crates/model/: Cargo.toml
crates/model/src/: descriptor.rs  lib.rs
crates/renderer/: Cargo.toml
crates/shader/: Cargo.toml
crates/shader/src/: lib.rs  source.rs  tests.rs  variable.rs  variable_type.rs  variables.rs
crates/shader_descriptor/: Cargo.toml
crates/shader_descriptor/src/: error.rs  lib.rs  source.rs  tests.rs  variable.rs  variable_type.rs  variables.rs
crates/shaders/: Cargo.toml
crates/shaders/src/: error.rs  lib.rs  tests.rs
crates/wgpu_connector/: Cargo.toml
crates/wgpu_connector/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: change_list_entry.rs  lib.rs  world_change.rs
crates/world_environment/: Cargo.toml
crates/world_environment/src/: cache_file.rs  descriptor.rs  error.rs  lib.rs  tests.rs
(+905 files in other folders)
