[workspace]
resolver = "2"
members = ["Orbital/", "Example/", "crates/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
# In-Workspace crates
app = { path = "crates/app" }
buffer = { path = "crates/buffer" }
bounding_box = { path = "crates/bounding_box" }
cache = { path = "crates/compute_shader" }
ibl_brdf = { path = "crates/ibl_brdf" }
instance = { path = "crates/instance" }
logging = { path = "crates/logging" }
material_shader = { path = "crates/material_shader" }
message = { path = "crates/message" }
mesh = { path = "crates/mesh" }
pbr_material_shader = { path = "crates/pbr_material_shader" }
shader = { path = "crates/shader" }
shader_preprocessor = { path = "crates/shader_preprocessor" }
texture = { path = "crates/texture" }
transform = { path = "crates/transform" }
variant = { path = "crates/variant" }
vertex = { path = "crates/vertex" }
wgpu_test_adapter = { path = "crates/wgpu_test_adapter" }
world_environment = { path = "crates/world_environment" }

# External crates
android_logger = "0.14.0"
async-std = "1.13.0"
async-trait = "0.1.83"
bitmask-enum = "2.2.5"
cgmath = "0.18.0"
crossbeam-channel = "0.5"
dirs = "5.0.1"
easy-gltf = "1.1.2"
fern = "0.7.0"
futures = "0.3.31"
gilrs = "0.11.0"
glob = "0.3.1"
hashbrown = "0.15.0"
humantime = "2.1.0"
image = "0.25.0"
log = "0.4.21"
num_cpus = "1.16.0"
pollster = "0.4.0"
rand = "0.9.0"
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0.103"
smol = "2.0.2"
toml = "0.8.19"
wgpu = "23.0.0"
winit = "0.30.0"
