[workspace]
resolver = "2"
members = ["Runtime", "Examples/*", "Tests/*"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 1

[profile.dev.package.wgpu]
opt-level = 3

[profile.dev.package.winit]
opt-level = 3

[profile.dev.package.hashbrown]
opt-level = 3

[profile.dev.package.pollster]
opt-level = 3

[profile.dev.package.async-std]
opt-level = 3

[profile.dev.package.cgmath]
opt-level = 3
