[package]
name = "orbital"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["gltf"]
gltf = ["dep:easy-gltf", "easy-gltf/names"]

[dependencies]
wgpu = { version = "23.0.0", features = [
    "serde",
    "naga-ir",
    "wgsl",
    "glsl",
    "spirv",
    "metal",
    "angle",
    "dx12",
    "vulkan-portability",
    "webgl",
    "webgpu",
] }
serde = { version = "1.0.174", features = ["derive"] }
winit = { version = "0.30.0" }
log = { version = "0.4.21" }
fern = { version = "0.7.0" }
serde_json = { version = "1.0.103" }
serde_derive = { version = "1.0.174" }
hashbrown = { version = "0.15.0" }
humantime = { version = "2.1.0" }
pollster = { version = "0.4.0" }
image = { version = "0.25.0" }
cgmath = { version = "0.18.0" }
easy-gltf = { version = "1.1.2", optional = true }
gilrs = { version = "0.11.0" }
crossbeam-channel = "0.5"
num_cpus = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.0", features = ["android-native-activity"] }
android_logger = { version = "0.14.0" }

[build-dependencies]
glob = "0.3.1"
