[package]
name = "akimo_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["gltf"]
gltf = ["dep:easy-gltf", "easy-gltf/names"]

[dependencies]
wgpu = { version = "0.20.0", features = [
    "spirv",
    "glsl",
    "wgsl",
    "naga-ir",
    "naga",
] }
serde = { version = "1.0.174", features = ["derive"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
winit = { version = "0.30.0" }
log = { version = "0.4.21" }
fern = { version = "0.6.2" }
serde_json = { version = "1.0.103" }
serde_derive = { version = "1.0.174" }
ulid = { version = "1.1.2" }
hashbrown = { version = "0.14.3" }
humantime = { version = "2.1.0" }
pollster = { version = "0.3.0" }
image = { version = "0.25.0" }
flume = { version = "0.11.0" }
png = { version = "0.17.13" }
cgmath = { version = "0.18.0" }

easy-gltf = { version = "1.1.2", features = ["names"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.0", features = ["android-native-activity"] }
android_logger = { version = "0.13.3" }
