[package]
name = "orbital"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["gamepad_input", "gamepad_input_poll", "auto_request_redraw", "standard_app_detect_no_more_elements"]
# Enables gamepad inputs from being polled and processed.
# Note: Winit _does_ have _some_ gamepad input support, but it's not very good at the moment, gilrs takes a much better approach (for now?).
gamepad_input = ["dep:gilrs"]
# Automatically polls gamepad inputs and processes them.
gamepad_input_poll = ["gamepad_input"]
# Will automatically request a redraw when the last frame was rendered.
# Enable this for games and applications that need to constantly redraw.
# Disable this for applications that only need to draw once every now and then.
auto_request_redraw = []
# Enable to detect if there are no more elements in the StandardApp and force a closure of the app if found to be true.
standard_app_detect_no_more_elements = []

[build-dependencies]
glob = "0.3.1"

[dependencies]
wgpu = { version = "26.0.1", features = [
    "angle",
    "dx12",
    "glsl",
    "metal",
    "naga-ir",
    "serde",
    "spirv",
    "vulkan-portability",
    "webgl",
    "webgpu",
    "wgsl",
] }
async-std = "1.13.0"
async-trait = "0.1.83"
cgmath = "0.18.0"
dirs = "6.0.0"
gltf = "1.4.1"
fern = "0.7.0"
futures = "0.3.31"
hashbrown = "0.15.0"
humantime = "2.1.0"
image = "0.25.0"
log = "0.4.21"
pollster = "0.4.0"
rand = "0.9.0"
serde = { version = "1.0.174", features = ["derive"] }
smol = "2.0.2"
winit = "0.30.0"
glob = "0.3.1"

gilrs = { version = "0.11.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"
winit = { version = "0.30.0", features = ["android-native-activity"] }
