[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
akimo_runtime = { path = "../../Runtime/" }

log = "0.4.21"
winit = "0.29.15"
wgpu = "0.19.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
winit = { features = ["android-native-activity"] }
