[package]
name = "gltf_pbr_damaged_helmet"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_gltf_pbr_damaged_helmet_desktop"
path = "src/main.rs"

[lib]
name = "test_gltf_pbr_damaged_helmet"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
orbital = { path = "../../Runtime" }
