[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
default = ["gamepad_input_poll", "auto_request_redraw"]
auto_request_redraw = []
gamepad_input_poll = ["gamepad_input"]
gamepad_input = ["gilrs"]

[dependencies]
async-std = { workspace = true }
cgmath = { workspace = true }
futures = { workspace = true }
gilrs = { workspace = true, optional = true }
hashbrown = { workspace = true }
logging = { workspace = true }
message = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
