[package]
name = "compute_engine_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
logging = { workspace = true }
logical_device = { workspace = true }
logical_device_wgpu = { workspace = true }
compute_engine_trait = { workspace = true }
engine_error = { workspace = true }
engine_result_wgpu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
image = { workspace = true }
flume = { workspace = true }
bytemuck = { workspace = true }
png = { workspace = true }
