[package]
name = "engine_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
logging = { workspace = true }
entity_system = { workspace = true }
event_system = { workspace = true }
gpu_connector = { workspace = true }
