[package]
name = "engine_result_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wgpu = { workspace = true }

engine_result = { workspace = true }
engine_error = { workspace = true }
