[package]
name = "event_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.37"
ulid = "1.1.2"
hashbrown = "0.14"

console_log = { path = "../console_log/" }
entity_system = { path = "../entity_system/" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
