[package]
name = "event_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen-futures = { workspace = true }
ulid = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
# console_log = { workspace = true }
entity_system = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
