[package]
name = "gpu_connector"
version = "0.1.0"
edition = "2021"

[features]
default = ["with_surface"]
with_surface = []

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }

logging = { workspace = true }
