[package]
name = "loader_gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { workspace = true }
smol = { workspace = true }
logging = { workspace = true }
log = { workspace = true }
loader = { workspace = true }
crossbeam-channel = { workspace = true }
easy-gltf = { workspace = true, features = ["names"] }
transform = { workspace = true }
world_change = { workspace = true }
model = { workspace = true }
camera = { workspace = true }
cgmath = { workspace = true }
texture = { workspace = true }
pbr_material_shader = { workspace = true }
vertex = { workspace = true }
hashbrown = { workspace = true }
