[package]
name = "shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
shader_preprocessor = { workspace = true }
buffer = { workspace = true }
texture = { workspace = true }

wgpu = { workspace = true }

[dev-dependencies]
wgpu_test_adapter = { workspace = true }
rand = { workspace = true }
