[package]
name = "shader_descriptor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
shader_preprocessor = { path = "../shader_preprocessor/" }
buffer_descriptor = { path = "../buffer_descriptor/" }
texture_descriptor = { path = "../texture_descriptor/" }
texture_realization = { path = "../texture_realization/" }

wgpu = { workspace = true }

[dev-dependencies]
wgpu_test_adapter = { path = "../wgpu_test_adapter/" }
rand = { workspace = true }
