[package]
name = "orbital_shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
async-trait = "0.1.83"
futures = "0.3.31"
dirs = "6.0.0"
log = "0.4.25"
glob = "0.3.1"

[dev-dependencies]
env_logger = "0.11.6"
