[package]
name = "wgpu_connector"
version = "0.1.0"
edition = "2021"

[features]
default = ["with_surface"]
with_surface = ["gpu_connector/with_surface", "dep:winit", "dep:wgpu"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
gpu_connector = { workspace = true }

logging = { workspace = true }
tokio = { workspace = true }

winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

[dev-dependencies]
image = { workspace = true }
flume = { workspace = true }
bytemuck = { workspace = true }
png = { workspace = true }
