[package]
name = "world_environment"
version = "0.1.0"
edition = "2024"

[dependencies]
texture = { workspace = true }
wgpu_test_adapter = { workspace = true }

cgmath = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
logging = { workspace = true }
wgpu = { workspace = true }
